<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@mipmap/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@mipmap/ic_menu_account"
            android:title="@string/title_my_account" />
        <item
            android:id="@+id/nav_deliveries"
            android:icon="@drawable/ic_history"
            android:title="@string/title_historic" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_financial"
            android:icon="@drawable/ic_financial"
            android:title="@string/title_financial" />


        <item
            android:id="@+id/nav_affiliate"
            android:icon="@mipmap/ic_menu_affiliate"
            android:title="@string/title_indications" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/ic_menu_logout"
            android:orderInCategory="200"
            android:title="@string/menu_logout" />
    </group>
</menu>
